--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,24 @@
 <body>
   <button type='button' id='logInButton'>Log In</button>
   <button type='button' id='logOutButton'>Log Out</button>
+  <button type='button' id='createTaskButton' data-toggle="modal" data-target="#creatorModal" class='btn btn-info'>Create Task</button>
   <div id='tasksDiv'></div>
+  <div class="modal" tabindex="-1" role="dialog" id='creatorModal'>
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Create Task</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" id='modalBody'>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
